# clusteredheatmap

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  tinker.py
clusteredheatmap/: chm.py  types.py
clusteredheatmap/algos/: distance.py  linkage.py  misc.py
clusteredheatmap/visu/plotly/: builder.py
example_data/: significant_proteins_df.csv
experiments/: largestuff.py  tinker.py  visutests.py
glustercram/: clustergram.py  dendrogram.py  types.py
glustercram/algos/: distance.py  hac.py  linkage.py
glustercram/visu/: heatmap.py
glustercram/visu/plotly/: builder.py
